# vision-board

./: .config  .gitignore  .sconsign.dblite  .secure_azone  .secure_rzone  .secure_xml  CMakeLists.txt  buildinfo.gpdsc  configuration.xml  rtconfig.h  rtconfig.py  rtthread.elf  rtthread.hex  rtthread.map
board/: SConscript
docs/: Project_Roadmap.md
docs/Daily_Logs/2026-04-12/: Log_2026_04_12.aux  Log_2026_04_12.out  Log_2026_04_12.run.xml  Log_2026_04_12.tex  elegantnote.cls
docs/Daily_Logs/2026-04-13/: Log_2026_04_13.aux  Log_2026_04_13.out  Log_2026_04_13.run.xml  Log_2026_04_13.tex
ra/: SConscript
ra_cfg/fsp_cfg/bsp/: bsp_mcu_family_cfg.h
ra_gen/: hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
src/: SConscript  main.cpp
src/app/: app_led.cpp  app_led.h
toolchain_bin/: arm-none-eabi-gdb  arm-none-eabi-nm
via/: rasc_armclang.via
